Added some OpenGraph header tags for social previews. Viber still insists onn useiig the favicon which is very painful.

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,20 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>KevinxErandhi</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root></app-root>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <title>KevinxErandhi</title>
+    <base href="/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+
+    <!--FACEBOOK-->
+    <meta property="og:image" content="https://kevinxerandhi-wedding.kcexn.com/assets/images/CouplePreview.JPG" />
+    <meta property="og:image:type" content="image/JPG" />
+    <meta property="og:image:width" content="515" />
+    <meta property="og:image:height" content="412" />
+    <meta property="og:title" content="Erandhi and Kevin invite you to their wedding!" />
+  </head>
+  <body>
+    <app-root></app-root>
+  </body>
 </html>
